--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -11,10 +11,11 @@ ENV ROS_WS /home/particle_filter
 
 RUN mkdir -p $ROS_WS/src
 WORKDIR $ROS_WS/src
-RUN git clone https://github.com/olaghattas/particle_filter_mesh.git -b optimize_motion_model && \
+RUN git clone https://github.com/olaghattas/particle_filter_mesh.git -b motion_model && \
     git clone https://github.com/olaghattas/shr_utils.git  && \
     git clone https://github.com/olaghattas/particle_filter_msgs.git && \
-    git clone https://github.com/stereolabs/zed-ros2-interfaces.git
+    git clone https://github.com/stereolabs/zed-ros2-interfaces.git && \
+    git clone https://github.com/olaghattas/aptags_tf_broadcast.git
 
 
 # install humble 
