--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 services:
     pf-humble:
         privileged: true
-        image: "olagh/pf_docker:first_trial"
+        image: "olagh/pf_docker:indp_docker"
         network_mode: host
         environment:
             - PULSE_SERVER=tcp:host.docker.internal:4713
@@ -11,7 +11,6 @@ services:
             - ROS_DOMAIN_ID=25
             - DISPLAY=:0
             - FASTRTPS_DEFAULT_PROFILES_FILE=/profile/fastrtps_default_profiles.xml
-            - cam_loc=dining_room
             - tag_kitchen=44
             - tag_doorway=38
             - tag_dining_room=37
@@ -19,6 +18,6 @@ services:
             - /tmp/.X11-unix/:/tmp/.X11-unix/
             - ./profile:/profile
             - ./launch_pf.bash:/tmp/launch_pf.bash
-        #tty: true
+        tty: true
 
-        command: /tmp/launch_pf.bash
+        #command: /tmp/launch_pf.bash
